mining에서 하나 만듦

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <li><a href="#">Affordable Hotels</a></li>
             <li class="active"><a href="">Premium Hotels</a></li>
             <li><a href="#">Contact Us</a></li>
-            <li><a href="#">About Us</a></li>
+            <li><a href="#">What you know About Us</a></li>
           </ul>
         </nav>
 
